# gym-rat

./: .gitignore  .pre-commit-config.yaml  Dockerfile  gunicorn_conf.py  pyproject.toml  start.py  start.sh
backend/: config.py  logger.py  models.py
backend/app/: main.py  ui_server.py
backend/app/auth/: dependencies.py  exceptions.py  models.py  routes.py  schemas.py  service.py  utils.py
backend/app/extensions/: middleware.py
backend/app/modules/workout/: dependencies.py  exceptions.py  models.py  routes.py  service.py
backend/cli/: main.py
backend/db/: session.py
backend/tests/: test_gym_rat.py
frontend/: README.md  index.html  package-lock.json  package.json  quasar.config.js
frontend/src/: App.vue
frontend/src/boot/: axios.js
frontend/src/components/: StopWatch.vue  WorkoutCalendar.vue  WorkoutDetail.vue
frontend/src/components/charts/: DistributionChart.vue  TrendChart.vue
frontend/src/components/tables/: LastWorkouts.vue
frontend/src/css/: app.scss  quasar.variables.scss
frontend/src/layouts/: NavLayout.vue  NavTabLayout.vue
frontend/src/pages/: AnalysisPage.vue  CalendarPage.vue  HomePage.vue  LandingPage.vue  LoginPage.vue  RegisterPage.vue  WorkoutPage.vue
frontend/src/router/: index.js  routes.js
frontend/src/services/: backend.js
frontend/src/stores/: auth-store.js  workout-store.js
